unity (0.2.6-0ubuntu1) UNRELEASED; urgency=low

  * New upstream release.
  * add debian/watch
  * update debian/copyright
  * debian/control:
    - change HomePage
    - update Standards-Version
    - remove liblauncher-dev as a build-dep
    - bump buil-dep to latest

 -- Didier Roche <didrocks@ubuntu.com>  Mon, 07 Jun 2010 12:21:02 +0200

unity (0.2.4-0ubuntu1) maverick; urgency=low

  * New upstream release.
  * debian/control:
    - replace libwncksync-dev by libbamf-dev
    - replace libdbusmodel-dev by libdee-dev

 -- Didier Roche <didrocks@ubuntu.com>  Thu, 27 May 2010 19:07:31 +0200

unity (0.2.2-0ubuntu1) lucid; urgency=low

  * New upstream release.
  * debian/control:
    - bump libclutk-dev, libdbusmodel-dev and libclutk-dev and libmutter-dev
      build-dep
    - add perceptualdiff build-dep
    - libunity-places0 removed in favor of libunity0 containing the new library
    for unity and the -private one.
  * renamed *.install file accordingly

 -- Didier Roche <didrocks@ubuntu.com>  Fri, 16 Apr 2010 18:02:43 +0200

unity (0.1.24-0ubuntu1) lucid; urgency=low

  * debian/control:
    - add debug package to both unity and libunity-places0
    - bump clutk, liblauncher and wncksync build-dep
  * New upstream release.

 -- Didier Roche <didrocks@ubuntu.com>  Fri, 19 Mar 2010 15:40:10 +0100

unity (0.1.22-0ubuntu1) lucid; urgency=low

  * New upstream release.
  * debian/control:
    - bump libclutk-dev and liblauncher-dev build-dep
  * debian/rules:
    - include gnome.mk to call dh_gconf
  * debian/unity.install:
    - install locales and gconf schema

 -- Didier Roche <didrocks@ubuntu.com>  Thu, 11 Mar 2010 20:36:49 +0100

unity (0.1.20-0ubuntu1) lucid; urgency=low

  * New upstream release.
  * debian/control:
    - bump clutk, liblauncher and wncksync build-dep

 -- Didier Roche <didrocks@ubuntu.com>  Thu, 04 Mar 2010 20:47:17 +0100

unity (0.1.18-0ubuntu1) lucid; urgency=low

  * New upstream release.
  * debian/control: