@@ -3,17 +3,14 @@
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/rules/simple-patchsys.mk
 include /usr/share/cdbs/1/class/autotools.mk
-include /usr/share/cdbs/1/class/gnome.mk
+include /usr/share/cdbs/1/rules/utils.mk
 
 CFLAGS=$(shell echo $$CFLAGS | sed -e 's/\-Wall//')
 
 DEB_DH_MAKESHLIBS_ARGS = -Xusr/lib/mutter/plugins/
 
-# List any files which are not installed
-include /usr/share/cdbs/1/rules/utils.mk
-common-binary-post-install-arch:: list-missing
-
-binary-pre-install::
+common-binary-post-install-arch::
 	find debian/tmp/usr/lib -name \*.la -exec rm {} \;
 	find debian/tmp/usr/lib -name \*.a -exec rm {} \;
 
+common-binary-post-install-arch:: list-missing
